-
Bug
-
Resolution: Done
-
P1: Critical
-
5.7.1
-
9970187acb7221f62ec001128026d202391699c0
Setting websocket active property to true does not reactivate the socket
Steps to reproduce the issue:
1. Run attached test application
2. Click on "Connect" button which sets the active property to true
Expected outcome:
Closed connection is reactivated
Actual outcome:
Connection is closed after setting the active property